# change-travis-stuff

./: .travis.yml  README.md  change-travis-stuff.cabal  stack.yaml
app/: Main.hs
